# web3-tools

./: .gitignore  .plan.md  README.md  filtered_wallets_multiple_patterns.xlsx  pyproject.toml  requirements.txt  wallet-pattern-creator.py  wallets-creator.py  wallets-pattern-until-find-anywhere.py  wallets-pattern-until-find-beginning.py
docs/superpowers/specs/: 2026-07-15-web3-tools-cli-design.md
tests/: test_cli.py  test_output.py  test_vanity.py  test_wallet.py
web3_tools/: cli.py  output.py  vanity.py  wallet.py
