[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "web3-wallet-tools"
version = "1.0.0"
description = "Generate EVM wallets and find vanity addresses"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["eth-account>=0.10"]

[project.scripts]
web3-tools = "web3_tools.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["web3_tools*"]
